Added different endpoints and configurations for admin user management, added checks for canceled loans as well as endpoint to cancel a loan application